Make derive macro optional behind 'derive' feature
- Add 'derive' feature to Cargo.toml
- Make alloc_zeroed_macros dependency optional
- Conditionally re-export macro when feature is enabled

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ name = "alloc_zeroed"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+derive = ["alloc_zeroed_macros"]
+
 [dependencies]
-alloc_zeroed_macros = { path = "./macros" }
+alloc_zeroed_macros = { path = "./macros", optional = true }
