--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2024"
 [features]
 default = []
 derive = ["alloc_zeroed_macros"]
+std = []
 
 [dependencies]
 alloc_zeroed_macros = { path = "./macros", optional = true }
 
 [dev-dependencies]
 trybuild = "1.0"
-alloc_zeroed = { path = ".", features = ["derive"] }
+alloc_zeroed = { path = ".", features = ["derive", "std"] }
 
 [package.metadata.miri]
 # Tests that should be run under Miri
