--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,25 +1,3 @@
-[package]
-name = "alloc_zeroed"
-version = "0.1.0"
-edition = "2024"
-
-[features]
-default = []
-derive = ["alloc_zeroed_macros"]
-std = []
-
-[dependencies]
-alloc_zeroed_macros = { path = "./macros", optional = true }
-
-[dev-dependencies]
-trybuild = "1.0"
-alloc_zeroed = { path = ".", features = ["derive", "std"] }
-
-[package.metadata.miri]
-# Tests that should be run under Miri
-tests = [
-    "miri_test_primitive",
-    "miri_test_array",
-    "miri_test_custom_struct",
-    "miri_test_buffer_allocation"
-]
+[workspace]
+members = ["core", "macros"]
+resolver = "2"
